cli/tests/testdata/publish/invalid_fast_check.out
Checking fast check type graph for errors...
error[zap-missing-explicit-return-type]: missing explicit return type in the public API
 --> [WILDCARD]mod.ts:2:17
  | 
2 | export function getRandom() {
  |                 ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/zap-missing-explicit-return-type


error: Found 1 problem
